5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4072/executions/1578_1332.log
== TEST (2019-03-12 15:30:24) 
-- CODE:
aresta = 6
area = x
 
print(round(3/2*3*5**2, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:30:50) 
-- CODE:
aresta = 6
area = 5
 
print(round(3/2*3*5**2, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:32:11) 
-- CODE:
aresta = 6
area = 18
 
print(round(3/2*3*5**2, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:32:25) 
-- CODE:
aresta = 6
area = 18
 
print(round(3/2*3*5**2, 4))
-- EXECUTION TIME:
0.198922
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:32:45) 
-- CODE:
aresta = 6
area = 12
 
print(round(3/2*3*5**2, 4))
-- EXECUTION TIME:
0.18033
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:32:51) 
-- CODE:
aresta = 6
area = 12
 
print(round(3/2*3*5**2, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:33:10) 
-- CODE:
aresta = 6
area = 12,9999
 
print(round(3/2*3*5**2, 4))
-- EXECUTION TIME:
0.128673
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:33:43) 
-- CODE:
aresta = 6
area = 12,9999
 
print(round(3/2*3*5**2, 4))
-- EXECUTION TIME:
0.163634
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:33:51) 
-- CODE:
aresta = 6
area = 12,9999
 
print(round(3/2*3*5**2, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:34:50) 
-- CODE:
aresta = 6
area = 12,9999
 
print(round(3/2*3*5**2, 4))
-- EXECUTION TIME:
0.134833
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:35:05) 
-- CODE:
aresta = 6
area = 12,9999
print(round(3/2*3*5**2, 4))
-- EXECUTION TIME:
0.185164
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:35:15) 
-- CODE:
aresta = 6
area = 5

print(round(3/2*3*5**2, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:36:47) 
-- CODE:


print(round(3/2*3*5**2, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:37:01) 
-- CODE:


print(round(3/2*3*5**2, 4))
-- EXECUTION TIME:
0.119026
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:37:13) 
-- CODE:
print(round(3/2*3*5**2, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:38:20) 
-- CODE:
aresta = 6
area = 12,9999
 
print(round(3/23*5**2, 4))
-- EXECUTION TIME:
0.143269
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
3.2609
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:38:27) 
-- CODE:
aresta = 6
area = 12,9999
 
print(round(3/2 3*5**2, 4))
-- EXECUTION TIME:
0.142298
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 4
    print(round(3/2 3*5**2, 4))
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:38:47) 
-- CODE:
aresta = 6
area = 12,9903
 
print(round(3/2 3*5**2, 4))
-- EXECUTION TIME:
0.15045
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 4
    print(round(3/2 3*5**2, 4))
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:38:57) 
-- CODE:
aresta = 6
area = 12,9903
 
print(round(3/2*3*5**2, 4))
-- EXECUTION TIME:
0.136538
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:41:21) 
-- CODE:
aresta = 6
area = 12,9903
 
print(round(3/2*3**5**2, 4))
-- EXECUTION TIME:
0.157417
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1270932914164.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:48:03) 
-- CODE:
aresta = 5
area = 649.5190
 
print(round((3*5**2)**3/2, 4))
-- EXECUTION TIME:
0.196791
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
210937.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:48:46) 
-- CODE:
aresta = 5
area = 649,5190
 
print(round((3*5**2)**3/2, 4))
-- EXECUTION TIME:
0.138517
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
210937.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:32:32) 
-- CODE:
aresta = 5
area = 649,5190
 
print(round((3/2*3**1/2*5**2), 4))
-- EXECUTION TIME:
0.217766
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:33:18) 
-- CODE:
aresta = 5
area = 649,5190
 
print(round((3/2*3**1/2*5**2), 4))
print"a área do hexágono é 649,5190"
-- EXECUTION TIME:
0.145029
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 5
    print"a \xe1rea do hex\xe1gono \xe9 649,5190"
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:22) 
-- CODE:
aresta = 5
area = 649,5190
 
print(round((3/2*3**1/2*5**2), 4))
print"a área do hexágono é 649,5190"
-- ERROR:
File "XXXX", line 5
    print"a área do hexágono é 649,5190"
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:34:39) 
-- CODE:
aresta = 5
area = 649,5190
 
print(round(3/2*3**1/2*5**2 , 4))
-- EXECUTION TIME:
0.198206
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:34:49) 
-- CODE:
aresta = 5
area = 649,5190
 
print(round(3/2*3**1/2*5**2,4))
-- EXECUTION TIME:
0.146615
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:06) 
-- CODE:
aresta = 5
area = 649,5190
 
print(round(3/2*3**1/2*5**2,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:38:07) 
-- CODE:
aresta = 5
area = print((3/2*3**1/2*5**2=)
 
print(round(area ,4))
-- EXECUTION TIME:
0.160337
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area = print((3/2*3**1/2*5**2=)
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:11) 
-- CODE:
aresta = 5
area = print((3/2*3**1/2*5**2=)
 
print(round(area ,4))
-- ERROR:
File "XXXX", line 2
    area = print((3/2*3**1/2*5**2=)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:44) 
-- CODE:
aresta = 5
area = print(3/2*3**1/2*5**2=)
 
print(round(area ,4))
-- ERROR:
File "XXXX", line 2
    area = print(3/2*3**1/2*5**2=)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:38:52) 
-- CODE:
aresta = 5
area = print(3/2*3**1/2*5**2=)
 
print(round(area ,4))
-- EXECUTION TIME:
0.18163
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area = print(3/2*3**1/2*5**2=)
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:54) 
-- CODE:
aresta = 5
area = print("3/2*3**1/2*5**2")
 
print(round(area ,4))
-- EXECUTION TIME:
0.174232
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 4, in <module>
    print(round(area ,4))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:13) 
-- CODE:
aresta = 5
area = print(3/2*3**1/2*5**2:)
 
print(round(area ,4))
-- ERROR:
File "XXXX", line 2
    area = print(3/2*3**1/2*5**2:)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:41:20) 
-- CODE:
aresta = 5
area = 
 
print(round((3/2*3**1/2*5**2) ,4))
-- EXECUTION TIME:
0.224712
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:44:43) 
-- CODE:
aresta = 5
area = 43,3012
 
print(round((3/2*3**1/2*5**2) ,4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:44:58) 
-- CODE:
aresta = 5
area = 43,3012
 
print(round((3/2*3**1/2*5**2),4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:45:51) 
-- CODE:
aresta = 5
area = 64,9519
 
print(round((3/2*3**1/2*5**2),4))
-- EXECUTION TIME:
0.17818
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:46:06) 
-- CODE:
aresta = 5
area = 64,9519
 
print(round(3/2*3**1/2*5**2,4))
-- EXECUTION TIME:
0.189192
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:46:19) 
-- CODE:
aresta = 5
area = 64,9519
 
print(round(3/2*3**1/2*5**2 ,4))
-- EXECUTION TIME:
0.181256
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:46:32) 
-- CODE:
aresta = 5
area = 64,9519
 
print(3/2*3**1/2*5**2 ,4)
-- EXECUTION TIME:
0.133173
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:46:51) 
-- CODE:
aresta = 5
area = 64,9519
 
print(3/2*3**1/2*5**2 ,4)
-- EXECUTION TIME:
0.132483
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:15) 
-- CODE:
aresta = 5
area = 64,9519
 
print(round(3/2*3**1/2*5**2 ,4))
-- EXECUTION TIME:
0.129007
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:38) 
-- CODE:
aresta = 5
area = 64,9519
 
print(round(3/2*3**1/2*5**2, 4))
-- EXECUTION TIME:
0.132379
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:42) 
-- CODE:
aresta = 5
area = 64,9519
 
print(round( 3/2*3**1/2*5**2, 4 ))
-- EXECUTION TIME:
0.136809
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:48:11) 
-- CODE:
aresta = 5
area = 64,9519
 
print(round( 3/2*3**1/2*5**2,4 ))
-- EXECUTION TIME:
0.134853
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:48:45) 
-- CODE:
aresta = 5
area = 64,9519
 
print(round(3/2*3**1/2*a**2,4))
-- EXECUTION TIME:
0.14054
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 4, in <module>
    print(round(3/2*3**1/2*a**2,4))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:08:32) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(3/2*3**0.5*5**2,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:09:02) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(3/2*3**0.5*5**2,4))
-- EXECUTION TIME:
0.146192
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
